# cg-opengl

./: CMakeLists.txt  glut_ply.cpp  glut_ply.h  main.cpp  main_1.cpp  matriz.cpp  matriz.h  triangulo2.vs
docker/: Dockerfile  run.sh
